# azilis

./: .gitattributes  .gitmodules  Cargo.toml
crates/azilis/: Cargo.toml
crates/azilis-parser/: Cargo.toml
crates/azilis-parser/src/: lib.rs
crates/azilis-parser/src/hierarchy/: audio.rs  mod.rs
crates/azilis/src/: config.rs  main.rs  package_manager.rs  util.rs
crates/azilis/src/gui/: bank_list.rs  color.rs  mod.rs  player.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/parser/src/hierarchy/: audio.rs  event.rs  mod.rs  music.rs
crates/rrise/: .gitignore  Cargo.toml  build.rs  flag_check.ilk
crates/rrise/c/utilities/: default_streaming_mgr.cpp  default_streaming_mgr.h  tiger_io_hook.cpp  tiger_io_hook.h  tiger_streaming_mgr.cpp  tiger_streaming_mgr.h
crates/rrise/examples/: doppler.rs  looping_event.rs
crates/rrise/rrise-headers/: Cargo.toml
crates/rrise/src/: error.rs  package_manager.rs  rrise.rs  settings.rs  sound_engine.rs  stream_mgr.rs
src/: main.rs  package_manager.rs  pbar.rs
src/gui/: bank_list.rs  color.rs  mod.rs  packages.rs  player.rs  style.rs
