[package]
name = "azilis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3"
destiny-pkg = {version = "0.13", features = [] }
env_logger = "0.11"
log = "0.4"
rrise = { path = "crates/rrise" }
parser = { path = "crates/parser" }
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "persistence",
    "wgpu",
] }
binrw = "0.13"
chroma-dbg = "0.1"
itertools = "0.14"
rayon = "1.10"
profiling = "1"
lazy_static = "1"
poll-promise = "0.3"
egui-dropdown = "0.13"
game-detector = "0.1"
egui-notify = "0.19"
dhat = "0.3"
mimalloc = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
directories = "6"
dasp_signal = "0.11.0"
hound = "3.5.1"

[features]
profiler = ["profiling/profile-with-tracy", "parser/profiler"]
dhat-heap = []
dhat-ad-hoc = []

# wwdebug/release/profile features

[profile.dev.package.destiny-pkg]
opt-level = 3
