[package]
name = "rrise"
version = "0.2.3"
edition = "2021"
authors = ["David Taralla <davidtaralla@gmail.com> & Contributors to the Rrise project"]
description = "A rust binding for Wwise"
repository = "https://github.com/dtaralla/rrise"
documentation = "https://dtaralla.github.io/rrise/"
readme = "README.md"
keywords = ["library", "sound", "3D", "wwise"]
categories = ["multimedia", "game-development"]
license-file = "LICENSE"
exclude = [
    "/examples/WwiseProject/Originals",
    "/videos",
]

[workspace]
members = ["rrise-headers"]

[patch.crates-io]
rrise-headers = { path = "rrise-headers" }

[dependencies]
cc = { version = "1.2", optional = true }
paste = "1.0"
log = "0.4"
ctrlc = { version = "3.4", optional = true }
simple_logger = { version = "5", optional = true }
lerp = { version = "0.5", optional = true }
destiny-pkg = "0.15.1"
lazy_static = "1"
anyhow = "1"
widestring = "1.1.0"

[build-dependencies]
bindgen = "0.71"
cc = { version = "1.2", features = ["parallel"] }
paste = "1.0"

[lib]
name = "rrise"
path = "src/rrise.rs"
crate-type = ["dylib", "rlib"]

[features]
release_max_level_debug = []
default = ["AkVorbisDecoder", "AkMeterFX"]
AkVorbisDecoder = []
AkOpusDecoder = ["AkOggOpusDecoder", "AkWemOpusDecoder"]
AkAudioInputSource = []
AkCompressorFX = []
AkDelayFX = []
AkExpanderFX = []
AkFlangerFX = []
AkGainFX = []
AkGuitarDistortionFX = []
AkHarmonizerFX = []
AkMatrixReverbFX = []
AkMeterFX = []
AkParametricEQFX = []
AkPeakLimiterFX = []
AkPitchShifterFX = []
AkRecorderFX = []
AkRoomVerbFX = []
AkSilenceSource = []
AkSineSource = []
AkStereoDelayFX = []
AkSynthOneSource = []
AkTimeStretchFX = []
AkToneSource = []
AkTremoloFX = []
# Internal features, don't enable independantly!
AkOggOpusDecoder = []
AkWemOpusDecoder = []
examples = ["ctrlc", "simple_logger", "lerp", "cc"]

[[example]]
name = "looping_event"
required-features = ["examples"]

[[example]]
name = "doppler"
required-features = ["examples", "AkSineSource"]

[[test]]
name = "one_frame_render"

[[test]]
name = "static_link_all"
required-features = [
    "AkVorbisDecoder",
    "AkOpusDecoder",
    "AkAudioInputSource",
    "AkCompressorFX",
    "AkDelayFX",
    "AkExpanderFX",
    "AkFlangerFX",
    "AkGainFX",
    "AkGuitarDistortionFX",
    "AkHarmonizerFX",
    "AkMatrixReverbFX",
    "AkMeterFX",
    "AkParametricEQFX",
    "AkPeakLimiterFX",
    "AkPitchShifterFX",
    "AkRecorderFX",
    "AkRoomVerbFX",
    "AkSilenceSource",
    "AkSineSource",
    "AkStereoDelayFX",
    "AkSynthOneSource",
    "AkTimeStretchFX",
    "AkToneSource",
    "AkTremoloFX"
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(wwrelease)', 'cfg(wwdebug)'] }

[profile.dev.package.destiny-pkg]
opt-level = 3
